# cpptemplate

./: .clang-format  CMakeLists.txt  setup.sh
lib/: CMakeLists.txt
lib/src/: a2lwriter.cpp
main/: CMakeLists.txt
tests/: CMakeLists.txt  a2lwriter_tests.cpp
